--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="https://kit.fontawesome.com/5cd1e1d933.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
   <title>client</title>
+  <style>
+    * {
+      font-family: 'Cute Font', cursive;
+    }
+  </style>
 </head>
 
 <body>
